--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "recoil": "^0.1.2",
     "socket.io-client": "^3.0.3",
     "web-vitals": "^0.2.4"
   },
