--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "recoil": "^0.1.2",
+    "rodal": "^1.8.1",
     "socket.io-client": "^3.0.3",
     "web-vitals": "^0.2.4"
   },
