--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll-to-bottom": "^4.1.0",
     "recoil": "^0.1.2",
     "rodal": "^1.8.1",
     "socket.io-client": "^3.0.3",
